working on moving css to less. Fixed text wrapping in footnote popovers

--- a/less/dokuwiki/editor.less
+++ b/less/dokuwiki/editor.less
@@ -73,13 +73,3 @@ div.picker {
     }
   }
 }
-
-input[type="text"],
-input[type="number"],
-input[type="password"],
-input[type="date"],
-input[type="week"],
-input[type="phone"],
-input[type="email"] {
-  .form-control;
-}
