--- a/less/dropdowns.less
+++ b/less/dropdowns.less
@@ -26,6 +26,7 @@
 }
 
 // The dropdown menu (ul)
+#qsearch__out ul,
 .dropdown-menu {
   position: absolute;
   top: 100%;
@@ -72,6 +73,7 @@
 }
 
 // Hover/Focus state
+#qsearch__out ul > li > a,
 .dropdown-menu > li > a {
   &:hover,
   &:focus {
